# claude-comms

./: .coverage  .crosstest-webmsg  .dockerignore  .gitignore  .mcp.json  .testing-context-audit.md  .testing-context.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMOS.md  Dockerfile  LICENSE  README.md  SECURITY.md  USAGE.md  dev.sh  docker-compose.yml  hatch_build.py  pyproject.toml  restart.sh
.claude/agents/: claude-comms-facilitator.md  claude-comms-participant.md  docs-agent.md
.claude/commands/: comms-join.md  comms-team.md
.github/workflows/: ci.yml  release.yml
.worklogs/: FINAL-OVERNIGHT-STATS.md  FINAL-VERIFICATION.md  MORNING-SUMMARY.md  agent-a-batch1.md  agent-b-batch1.md  agent-c-batch1.md  agent-d-batch2.md  agent-docs.md  agent-e-batch2.md  agent-f-batch2.md  agent-g-batch2.md  agent-h-batch3.md  agent-i-batch3.md  agent-j-batch4.md  agent-k-batch4.md  agent-registry-persistence.md  agent-svelte-v032-review.md  agent-test-async-fixes.md  agent-tests-greenlight.md  bug-fix-loop.md  chat-testing-bugfixes.md  defensive-testing.md  overnight-a11y-audit.md  overnight-api-tests.md  overnight-api-validation.md  overnight-broker-resilience.md  overnight-build-optimization.md  overnight-ci-lint-gate.md  overnight-ci-verify.md  overnight-cleanup.md  overnight-client-type-display.md  overnight-code-quality.md  overnight-component-polish.md  overnight-connection-banner.md  overnight-coverage-report.md  overnight-cross-test.md  overnight-debug-cleanup.md  overnight-docker-verify.md  overnight-emoji-reactions-polish.md  overnight-error-handling.md  (+161 more)
docs/: REMOTE-ACCESS.md
mockups/: concept-a-discord.html  concept-b-modern-light.html  concept-c-cyberpunk.html  concept-d-midnight-amethyst.html  concept-e-carbon-ember.html  concept-f-deep-ocean.html  concept-g-obsidian-rose.html  concept-h-phantom-jade.html  concept-i-obsidian-ember.html  concept-j-phantom-ember-r1.html  concept-j-phantom-ember-r2.html  concept-j-phantom-ember-r3.html  concept-j-phantom-ember-r4.html  concept-j-phantom-ember-r5.html  concept-j-phantom-ember-r6.html  concept-j-phantom-ember-r7.html  concept-j-phantom-ember-v2-r1.html  concept-j-phantom-ember-v2-r10-interactive.html  concept-j-phantom-ember-v2-r10-interactive.js  concept-j-phantom-ember-v2-r10.html  concept-j-phantom-ember-v2-r2.html  concept-j-phantom-ember-v2-r3.html  concept-j-phantom-ember-v2-r4.html  concept-j-phantom-ember-v2-r5.html  concept-j-phantom-ember-v2-r6.html  concept-j-phantom-ember-v2-r7.html  concept-j-phantom-ember-v2-r8.html  concept-j-phantom-ember-v2-r9.html  concept-j-phantom-ember.html  concept-k-ember-fusion.html  test-console-log.txt
mockups/favicons/: index.html
plans/: harness-findings-fix-plan.md  mentions-vs-whisper-separation.md  multi-agent-chat-usage-plan.md  reactions-hover-edge-map.md  reactions-hover-plan.md
scripts/: bump_version.py
src/claude_comms/: __init__.py  __main__.py  artifact.py  broker.py  cli.py  config.py  conversation.py  hook_installer.py  log_exporter.py  mcp_server.py  mcp_summaries.py  mcp_tools.py  mention.py  message.py  notification_hook.cmd  notification_hook.sh  notifier.py  participant.py  presence.py  publisher.py  reactions.py  registry_store.py  working_indicator.py
tests/: conftest.py  test_api_conversations.py  test_api_endpoints.py  test_api_invite.py  test_api_reactions.py  test_artifact.py  test_artifact_naming.py  test_artifact_post_endpoint.py  test_artifact_update_after_pruning.py  test_bearer_token_regenerated_on_restart.py  test_broker.py  test_broker_ws_advertise.py  test_cli.py  test_cli_extended.py  test_cli_update.py  test_comms_dm_open.py  test_comms_get_channel_role.py  test_comms_kick.py  test_comms_read_unread.py  test_config.py  test_conversation.py  test_conversation_delete_archive_roles.py  test_conversation_events.py  test_conversation_update_extended.py  test_cors_exact_match.py  test_csp.py  test_deprecated_cross_origin_config.py  test_doctor.py  test_e2e.py  test_gaps_config.py  test_gaps_expanded.py  test_gaps_hook_installer.py  test_gaps_log_exporter.py  test_gaps_mcp_tools.py  test_gaps_message.py  test_integration.py  test_log_exporter.py  test_mcp_presence.py  test_mcp_server_extended.py  test_mcp_summaries.py  (+25 more)
tools/agent-harness/: FINDINGS.md  README.md  probe_concurrency.py  probe_notify.py  requirements.txt  run.py  smoke_agent.py  smoke_core.py
tools/comms-client-kit/: CLAUDE.snippet.md  install.sh  selftest_primitives.py
web/: .npmrc  crosstest-diag.mjs  crosstest-final.mjs  crosstest.mjs  index.html  morning-screenshots.mjs  package-lock.json  package.json  playwright-final.config.js  playwright-preview.config.js  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  pw-modal.config.js  test-channel-switching.mjs  test-rounds-1-5.mjs  vite.config.js  vitest.config.js
web/e2e/: README.md  a11y-keyboard.spec.js  app-loads.spec.js  channel-modal-flow.spec.js  chat.spec.js  console-errors.spec.js  context-debug.spec.js  context-menu.spec.js  csp-violations.spec.js  debug-reactivity.spec.js  emoji-picker.spec.js  final-screenshots.spec.js  gallery-screenshots.spec.js  history-api-e2e.spec.js  keyboard.spec.js  member-list.spec.js  messages.spec.js  modals.spec.js  overnight-comprehensive.spec.js  overnight-members-theme.spec.js  panels.spec.js  round6-modals.spec.js  round7-keyboard.spec.js  round8-edge-cases.spec.js  round9-visual.spec.js  run-smoke-test.mjs  search-filters.spec.js  seed-gallery-state.py  seed-live-reactions.py  settings-panel.spec.js  sidebar.spec.js  smoke-test-all-interactions.spec.js  test-all-console.spec.js  test-debug-comprehensive.spec.js  test-dom-polling.spec.js  test-members.spec.js  theme-responsive.spec.js  thread-panel.spec.js  user-stories-r2.spec.js  user-stories.spec.js  (+2 more)
web/scripts/: check-bundle-size.mjs  screenshot-favicon-page.mjs
web/src/: App.svelte  app.css
web/tests/: a11y-keyboard.spec.js  a11y.spec.js  api-base-derivation.spec.js  api-post-409-body.spec.js  api-update-name-concise.spec.js  app-browser-notification-gate.spec.js  app-toast-mention-muted.spec.js  dm-parser.spec.js  (+96 more)
(+123 files in other folders)
