[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "claude-comms"
version = "0.4.4"
description = "Distributed inter-Claude messaging platform"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Phil LaFayette", email = "plafaydev@gmail.com"}]
readme = "README.md"
keywords = ["mqtt", "chat", "claude", "mcp", "svelte", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pinned to the 0.11.x line: the single-origin /mqtt broker bridge depends
    # on the public ``Broker.external_connected`` + ``ExternalServer`` API and
    # the ``ReaderAdapter`` / ``WriterAdapter`` interface (amqtt/adapters.py).
    # Cap below 0.12 so an upstream rename of that API can't break the bridge
    # silently.
    "amqtt>=0.11,<0.12",
    "aiomqtt>=2.0.0",
    # uvicorn needs a WebSocket protocol implementation for the /mqtt bridge.
    # ``websockets`` is already an amqtt transitive dep and uvicorn auto-detects
    # it; pin it explicitly so a WS-capable uvicorn is guaranteed in fresh
    # installs (independent of amqtt's resolution).
    "websockets>=12",
    "mcp>=1.20.0",
    "typer>=0.15.0,<0.16.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
    # pydantic-core imports typing_extensions.Sentinel (PEP 661), added in
    # 4.12.0. Without this floor a clean install can resolve an older
    # typing_extensions and the daemon fails to start with ImportError.
    # Surfaced by the e2e CI gate (daemon spawn in a fresh environment).
    "typing_extensions>=4.12.0",
]

[project.optional-dependencies]
tui = ["textual>=0.80.0"]
web = []
all = ["claude-comms[tui,web]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
claude-comms = "claude_comms.cli:app"

[project.urls]
Homepage = "https://github.com/Aztec03hub/claude-comms"
Repository = "https://github.com/Aztec03hub/claude-comms"
Issues = "https://github.com/Aztec03hub/claude-comms/issues"

# Run hatch_build.py during every wheel/sdist build — compiles the Svelte
# web UI and ensures src/claude_comms/web/dist/ is populated before the
# wheel is sealed. No-op when assets are already built (CI prebuild, repeat
# builds, etc.).
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_comms"]
# `artifacts` opts gitignored built assets into the wheel. The web UI lives
# under src/claude_comms/web/dist/, which is gitignored (built output), so
# we name it explicitly here.
artifacts = ["src/claude_comms/web/dist/**"]

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_comms/**",
    "web/**",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "USAGE.md",
    "CONTRIBUTING.md",
]
exclude = [
    "web/node_modules",
    "web/.svelte-kit",
    "web/dist",
    "src/claude_comms/web/dist",
    "web/test-results",
    "web/playwright-report",
    "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
